--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/bhdirect-ebooks/mywsbcss/issues"
   },
-  "homepage": "https://github.com/bhdirect-ebooks/mywsbcss#readme",
+  "homepage": "https://github.com/bhdirect-ebooks/mywsbcss#readme"
 }
