--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "scss": "node-sass --watch src -o css"
+},
   "repository": "git+https://github.com/bhdirect-ebooks/mywsbcss.git",
   "author": "Weston Littrell",
   "license": "MIT",
