--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "git+https://github.com/bhdirect-ebooks/mywsbcss.git",
-  "author": "Weston Littrell",
+  "contributors": ["Weston Littrell", "Peter Turner"],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bhdirect-ebooks/mywsbcss/issues"
