remove left and right margin from body in web app

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "git+https://github.com/bhdirect-ebooks/mywsbcss.git",
-  "contributors": ["Weston Littrell", "Peter Turner"],
+  "contributors": [
+    "Weston Littrell",
+    "Peter Turner"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bhdirect-ebooks/mywsbcss/issues"
